--- a/src/components/AlphaAnalysis/StockPage/StockPage.scss
+++ b/src/components/AlphaAnalysis/StockPage/StockPage.scss
@@ -3,28 +3,42 @@
     align-items: center;
     overflow: hidden;
 
-    .left{
-        flex: .3;
+    .wrapper{
+        padding: 0px 20px;
+        display: flex;
         align-items: center;
-
-        .itemContainer{
-            display: flex;
+        justify-content: space-between;
+        
+        .left{
+            flex: .25;
             align-items: center;
-            justify-content: center;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            flex-direction: column;
+
+            .itemContainer{
+                img{
+                    width: 80%;
+                    height: 90%;
+                    padding: 10px;
+                }
+                display: flex;
+                align-items: center;
+            }
         }
-    }
-    .right{
-        flex: .7;
-        align-items: center;
-
-        .itemContainer{
-            display: flex;
+        .right{
+            flex: .5;
             align-items: center;
-            justify-content: center;
-            padding: 20px;
-            img{
-                width: 150px;
-                height: 150px;
+
+            .itemContainer{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 20px;
+                img{
+                    width: 150px;
+                    height: 150px;
+                }
             }
         }
     }
