--- a/src/components/AlphaAnalysis/topbar/topbar.scss
+++ b/src/components/AlphaAnalysis/topbar/topbar.scss
@@ -17,6 +17,8 @@
             display: flex;
             align-items: center;
             .logo{
+                width: 50px;
+                height: 50px;
                 font-size: 40px;
                 font-weight: 700;
                 text-decoration: none;
