--- a/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
 
     .wrapper{
-        padding: 0px 20px;
+        padding: 0px 150px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -18,9 +18,8 @@
 
             .itemContainer{
                 img{
-                    width: 1000%;
-                    height: 1000%;
-                    padding: 10px;
+                    width: 250px;
+                    height: auto;
                 }
                 display: flex;
                 align-items: center;
@@ -31,10 +30,11 @@
             align-items: center;
 
             .itemContainer{
+                color:white;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                padding: 20px;
+                padding: 0px;
                 img{
                     width: 150px;
                     height: 150px;
