--- a/src/components/AlphaAnalysis/StockPage/StockPage.scss
+++ b/src/components/AlphaAnalysis/StockPage/StockPage.scss
@@ -6,14 +6,14 @@
     .wrapper{
         padding: 0px 20px;
         display: flex;
-        align-items: center;
+        align-items:flex-start;
         justify-content: space-between;
         
         .left{
             flex: .25;
             align-items: center;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
             flex-direction: column;
 
             .itemContainer{
