--- a/src/components/AlphaAnalysis/StockPage/StockPage.scss
+++ b/src/components/AlphaAnalysis/StockPage/StockPage.scss
@@ -1,20 +1,34 @@
 .StockPage{
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
+    .top{
+        width: 93%;
+        padding: 10px;
+        display: flex;
+        align-items: flex-start;
+        overflow: hidden;
+        h1{
+            color: white;
+            font-size: 45px;
+            font-weight: 500;
+        }
+    }
 
     .wrapper{
-        padding: 0px 20px;
+        padding-left: 3%;
         display: flex;
         align-items:flex-start;
         justify-content: space-between;
+        overflow: hidden;
         
         .left{
-            flex: .25;
+            flex: 25%;
             align-items: center;
             flex-wrap: wrap;
             justify-content: center;
-            flex-direction: column;
 
             .itemContainer{
                 img{
@@ -27,17 +41,19 @@
             }
         }
         .right{
-            flex: .5;
+            flex: 50%;
             align-items: center;
+            justify-content: center;
+            color: white;
 
             .itemContainer{
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                padding: 20px;
-                img{
-                    width: 150px;
-                    height: 150px;
+                padding: 5%;
+                h2{
+                    padding: 2%;
+                    font-size: 20px;
+                    font-weight: 100;
                 }
             }
         }
