all new chagnes

--- a/src/components/AlphaAnalysis/Overview/Overview.scss
+++ b/src/components/AlphaAnalysis/Overview/Overview.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(85, 105, 126);
     .top{
         width: 75%;
         display: flex;
@@ -92,5 +93,4 @@
             color: white;
         }
     }
-    
 }
