--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -2,26 +2,50 @@
     background-color: cadetblue;
     width: 75%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    .left{
-        margin: 10vh 10vh 10vh;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        img{
-            width: 70%;
-            height: 80%;            
-        }        
-    }
-    .right{
-        width: 100%;
-        align-items: center;
-        justify-content: center;
+    align-items: center;
+    .top{
+        width: 75%;
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 10vh;
         h1{
-            font-size: 20px;
+            color: white;
+            font-size: 50px;
             font-weight: 100;
         }
     }
+    .wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 75%;
+        .right{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;       
+            img{
+                width: 250px;
+                height: auto;          
+            }  
+                
+        }
+        .left{
+            width: 75%;
+            align-items: center;
+            justify-content: center;
+            h1{
+                color: white;
+                font-size: 20px;
+                font-weight: 100;
+            }
+            .icon{
+                padding-bottom: 15px;
+            }
+        }
+    }
+    
 }
