--- a/src/components/AlphaAnalysis/MenuScreen/MenuScreen.scss
+++ b/src/components/AlphaAnalysis/MenuScreen/MenuScreen.scss
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(189, 189, 181);
     .wrapper{
-        width: 95%;
-        height: 90%;
+        width: 100%;
+        height: 80%;
     }
 }
