--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -9,7 +9,7 @@
         width: 75%;
         display: flex;
         align-items: flex-start;
-        margin-bottom: 10vh;
+        background-color: blue;
         h1{
             color: white;
             font-size: 50px;
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: center;
         width: 75%;
+        background-color: red;
         .right{
             display: flex;
             align-items: center;
