--- a/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
@@ -2,12 +2,26 @@
     display:flex;
     align-items: center;
     overflow: hidden;
-
-    .wrapper{
-        padding: 0px 150px;
+    .top{
+        width: 75%;
         display: flex;
+        align-items: flex-start;
+        margin-bottom: 10vh;
+        h1{
+            color: white;
+            font-size: 50px;
+            font-weight: 100;
+        }
+    }
+    .wrapper{
+        display: grid;
+        width: 75%;
+        grid-auto-rows: minmax(100px, auto);
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        color: white;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         
         .left{
             flex: .25;
@@ -15,6 +29,10 @@
             flex-wrap: wrap;
             justify-content: space-between;
             flex-direction: column;
+            width: 100%;
+            height: 100%;
+            grid-column: 1;
+            grid-row: 1;
 
             .itemContainer{
                 img{
