--- a/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/menu/watchlist/Watchlist.scss
@@ -1,7 +1,11 @@
 .Watchlist{
     display:flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
+
     .top{
         width: 75%;
         display: flex;
@@ -14,30 +18,29 @@
         }
     }
     .wrapper{
-        display: grid;
-        width: 75%;
-        grid-auto-rows: minmax(100px, auto);
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
-        color: white;
+        padding: 0px 150px;
+        padding-left: 12%;
+        display: flex;
         align-items: center;
-        justify-content: center;
+        align-items:flex-start;
+        justify-content: space-between;
+        overflow: hidden;
         
         .left{
             flex: .25;
+            flex: 25%;
             align-items: center;
             flex-wrap: wrap;
             justify-content: space-between;
             flex-direction: column;
-            width: 100%;
-            height: 100%;
-            grid-column: 1;
-            grid-row: 1;
+            justify-content: center;
+            
 
             .itemContainer{
                 img{
                     width: 250px;
                     height: auto;
+                    padding: 10px;
                 }
                 display: flex;
                 align-items: center;
@@ -45,7 +48,10 @@
         }
         .right{
             flex: .5;
+            flex: 50%;
             align-items: center;
+            justify-content: center;
+            color: white;
 
             .itemContainer{
                 color:white;
@@ -56,8 +62,14 @@
                 img{
                     width: 150px;
                     height: 150px;
+                padding: 5%;
+                h2{
+                    padding: 3.5%;
+                    font-size: 25px;
+                    font-weight: 100;
                 }
             }
         }
     }
+}
 }
