--- a/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
+++ b/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
@@ -1,3 +1,4 @@
+
 .Portfolio{
     display: flex;
     flex-direction: column;
@@ -5,10 +6,10 @@
     align-items: center;
     .topWrapper{
         padding-top: 5%;
-        width: 60%;
+        width: 75%;
         height: 20%;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         h1{
             color: white;
             font-size: 50px;
@@ -16,15 +17,14 @@
         }
     }
     .wrapper{
-        height: 80%;
-        width: 100%;
+        height: 100%;
+        width: 75%;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        align-items: center;
-        margin-bottom: 10%;
+        align-items:flex-start;        
         .andre{
-            flex:.25;
+            flex:.33;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -47,13 +47,20 @@
                         height: auto;
                         width: auto;
                         padding-top: 30px;
+                        text-align: center;
+                    }
+                    h2{
+                        font-weight: 100;
+                        font-size: 15px;
+                        text-align: center;
+                        color: white;
                     }
                 
                 }
             }
         }
         .lawrence{
-            flex:.25;
+            flex:.33;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -71,19 +78,29 @@
                     }
                 }
                 .bottom{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
                     h1{
                         font-weight: 300;
                         color: white;
                         height: auto;
                         width: auto;
+                        text-align: center;
                         padding-top: 30px;
+                    }
+                    h2{
+                        font-weight: 100;
+                        font-size: 15px;
+                        text-align: center;
+                        color: white;
                     }
                 
                 }
             }
         }
         .michael{
-            flex:.25;
+            flex:.33;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -106,6 +123,13 @@
                         font-weight: 300;
                         color: white;
                         padding-top: 30px;
+                        text-align: center;
+                    }
+                    h2{
+                        font-weight: 100;
+                        font-size: 15px;
+                        text-align: center;
+                        color: white;
                     }
                 
                 }
