--- a/src/components/AlphaAnalysis/topbar/topbar.scss
+++ b/src/components/AlphaAnalysis/topbar/topbar.scss
@@ -16,26 +16,18 @@
         .left{
             display: flex;
             align-items: center;
-            .logo{
-                width: 50px;
-                height: 50px;
+            a{
+                padding-right: 10px;
+                color: white;
                 font-size: 40px;
-                font-weight: 700;
+                font-weight: 500;
                 text-decoration: none;
-                color: inherit;
             }
-            .itemContainer{
-                display: flex;
-                align-items: center;
-                margin-left: 30px;
-                .icon{
-                    font-style: 10px;
-                    margin-right: 5px;
-                }
-                span{
-                    font-style: 15px;
-                    font-weight: 400;
-                }
+            .logo{
+                width: 40px;
+                height: 50px;
+                color: inherit;
+                border-radius: 50%;
             }
         }
         .right{
