--- a/src/components/AlphaAnalysis/menu/searchFunctionality/Search.scss
+++ b/src/components/AlphaAnalysis/menu/searchFunctionality/Search.scss
@@ -1,5 +1,4 @@
 .Search{
-    display:flex;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,7 +18,7 @@
     }
     .wrapper{
         padding: 0px 150px;
-        padding-left: 12%;
+        padding-right: 17%;
         display: flex;
         align-items: center;
         align-items:flex-start;
@@ -27,8 +26,7 @@
         overflow: hidden;
         
         .left{
-            flex: .25;
-            flex: 25%;
+            flex: 50%;
             align-items: center;
             flex-wrap: wrap;
             justify-content: space-between;
@@ -38,7 +36,7 @@
 
             .itemContainer{
                 img{
-                    width: 250px;
+                    width: 350px;
                     height: auto;
                     padding: 10px;
                 }
@@ -63,5 +61,7 @@
                 }
             }
         }
-}
+    }
+        
+
 }
