--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -3,8 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    overflow: hidden;
     .top{
         width: 93%;
         padding: 10px;
@@ -14,26 +13,28 @@
         h1{
             color: white;
             font-size: 50px;
-            font-weight: 100;
+            font-weight: 500;
         }
     }
     .wrapper{
+        padding-left: 3%;
         display: flex;
-        align-items: flex-start; 
+        align-items:flex-start;
+        justify-content: space-between;
+        overflow: hidden; 
         .left{
-            flex:50%;
+            flex: 25%;
             align-items: center;
-            display: flex;
+            flex-wrap: wrap;
             justify-content: center;
-            width: 100%;
             .itemContainer{
                 img{
-                    height: 690px;
-                    width: auto;
+                    width: 80%;
+                    height: 90%;
+                    
                 }
                 display: flex;
                 align-items: center;
-        
             }
            
         }
