new changes to andres portfolio

--- a/src/components/AlphaAnalysis/Intro/Intro.scss
+++ b/src/components/AlphaAnalysis/Intro/Intro.scss
@@ -6,9 +6,8 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    overflow: hidden;
     h1{
-        width: 80%;
-        height: 50%;
         color:white;
         margin: 0 15vh 0;
         font-weight: 200;
