--- a/src/components/AlphaAnalysis/MenuScreen/MenuScreen.scss
+++ b/src/components/AlphaAnalysis/MenuScreen/MenuScreen.scss
@@ -1,8 +1,9 @@
+@import "../../../global.scss";
 .MenuScreen{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(189, 189, 181);
+    background-color: $mainColor;
     width: 100%;
     height: 100%;
     .wrapper{
