--- a/src/components/AlphaAnalysis/Overview/Overview.scss
+++ b/src/components/AlphaAnalysis/Overview/Overview.scss
@@ -4,12 +4,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(85, 105, 126);
+    background-color: #55697e;
     .top{
         width: 75%;
         height: 20%;
         display: flex;
         align-items: flex-start;
+        overflow: hidden;
         h1{
             color: white;
             font-size: 50px;
@@ -19,16 +20,16 @@
     .wrapper{
         display: grid;
         width: 75%;
-        height: 100%;
+        height: auto;
         grid-auto-rows: minmax(100px, auto);
         grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
+        grid-gap: 2%;
         color: white;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
        .one{
-           width: 100%;
-           height: 100%;
+           
            grid-column: 1;
            grid-row: 1;
            h1{
@@ -43,8 +44,6 @@
            color: white;
        }
        .two{
-            width: 100%;
-            height: 100%;
             grid-column: 1;
             grid-row: 2;
             color: white;
@@ -60,8 +59,6 @@
             color: white;
         }
         .three{
-            width: 100%;
-            height: 100%;
             grid-column: 2;
             grid-row: 1;
             color: white;
@@ -77,8 +74,6 @@
             color: white;
         }
         .four{
-            width: 100%;
-            height: 100%;
             grid-column: 2;
             grid-row: 2;
             color: white;
