--- a/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
+++ b/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
@@ -4,16 +4,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #55697e;
+    overflow: hidden;
     .topWrapper{
         padding-top: 5%;
         width: 75%;
         height: 20%;
         display: flex;
         align-items: center;
+        overflow: hidden;
         h1{
             color: white;
             font-size: 50px;
-            font-weight: 500;
+            font-weight: 100;
         }
     }
     .wrapper{
@@ -22,7 +25,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        align-items:flex-start;        
+        align-items:flex-start; 
+        overflow: hidden;       
         .andre{
             flex:.33;
             display: flex;
