--- a/src/components/AndrePortfolio/intro/Intro.scss
+++ b/src/components/AndrePortfolio/intro/Intro.scss
@@ -1,22 +1,25 @@
 @import "../../../global.scss";
 .intro{
     width: 100%;
-    height: 100vh;
-    background-color: $mainColor;
+    height: 30%;
     align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     
     .left{
-        margin: 30vh 20vh 0;
         color: white;
         display: flex;
+        width: 70%;
+        align-items:flex-start;
+        justify-content: center;
+        flex-direction: column;
+        padding-bottom: 2%;
         .hello{
             font-size: 20px;
             font-weight: 100;
         }
-    }
-    .bottom{
-        margin: 0 20vh 0;
-        display:grid;
         .myName{
             font-size: 70px;
             font-weight: 200;
@@ -30,7 +33,7 @@
             text-decoration: none;        
         }
         .bottomText{
-            width:200vh;
+            width: 70%;
             font-size: 30px;
             font-weight: 200;
             color: rgb(116, 200, 245); //this is the line for the bottom red text in the into
