--- a/src/components/AndrePortfolio/topbar/topbar.scss
+++ b/src/components/AndrePortfolio/topbar/topbar.scss
@@ -15,9 +15,10 @@
         .left{
             display: flex;
             align-items: center;
+            width: 50%;
             .logo{
-                width: auto;
-                height: auto;
+                padding-left: 2%;
+                padding-right: 5%;
                 font-size: 40px;
                 font-weight: 700;
                 text-decoration: none;
@@ -26,7 +27,8 @@
             .itemContainer{
                 display: flex;
                 align-items: center;
-                margin-left: 30px;
+                padding-right: 5%;
+                width: auto;
                 .icon{
                     font-style: 10px;
                     margin-right: 5px;
