--- a/src/components/AlphaAnalysis/AlphaHome/AlphaHome.scss
+++ b/src/components/AlphaAnalysis/AlphaHome/AlphaHome.scss
@@ -10,6 +10,9 @@
         scroll-behavior: smooth;
         scroll-snap-type: y mandatory;
         scrollbar-width: none;
+        -webkit-box-align: 0;
+        flex-grow: 0;
+        flex-shrink: 0;
         &::-webkit-scrollbar{
             display: none;
         }
