--- a/src/components/AlphaAnalysis/Overview/Overview.scss
+++ b/src/components/AlphaAnalysis/Overview/Overview.scss
@@ -11,10 +11,17 @@
         display: flex;
         align-items: flex-start;
         overflow: hidden;
+        @include mobile{
+            width: 90%;
+            height: auto;
+        }
         h1{
             color: white;
             font-size: 50px;
             font-weight: 100;
+            @include mobile{
+                font-size: 30px;
+            }
         }
     }
     .wrapper{
@@ -28,6 +35,11 @@
         align-items: center;
         justify-content: center;
         overflow: hidden;
+        @include mobile{
+            width: 90%;
+            height: 100%;
+            grid-gap: 1%;
+        }
        .one{
            
            grid-column: 1;
@@ -36,10 +48,19 @@
                font-size: 30px;
                padding: 10px 0 10px;
                font-weight: 300;
+               @include mobile{
+                font-size: 25px;
+            }
            }
            h2{
             font-size: 20px;
             font-weight: 100;
+            @include mobile{
+                font-size: 15px;
+            }
+            a{
+                color: red;
+            }
            }
            color: white;
        }
@@ -50,11 +71,16 @@
             h1{
                 font-size: 30px;
                 padding: 10px 0 10px;
-                font-weight: 300;
-            }
-            h2{
-             font-size: 20px;
-             font-weight: 100;
+                font-weight: 300;@include mobile{
+                    font-size: 25px;
+                }
+               }
+               h2{
+                font-size: 20px;
+                font-weight: 100;
+                @include mobile{
+                    font-size: 15px;
+                }
             }
             color: white;
         }
@@ -66,10 +92,16 @@
                 font-size: 30px;
                 padding: 10px 0 10px;
                 font-weight: 300;
-            }
-            h2{
-             font-size: 20px;
-             font-weight: 100;
+                @include mobile{
+                    font-size: 25px;
+                }
+               }
+               h2{
+                font-size: 20px;
+                font-weight: 100;
+                @include mobile{
+                    font-size: 15px;
+                }
             }
             color: white;
         }
@@ -81,10 +113,16 @@
                 font-size: 30px;
                 padding: 10px 0 10px;
                 font-weight: 300;
-            }
-            h2{
-             font-size: 20px;
-             font-weight: 100;
+                @include mobile{
+                    font-size: 25px;
+                }
+               }
+               h2{
+                font-size: 20px;
+                font-weight: 100;
+                @include mobile{
+                    font-size: 15px;
+                }
             }
             color: white;
         }
