--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -1,19 +1,30 @@
+@import "../../../global.scss";
 .Plaid{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    height: 100%;
+    
     .top{
         width: 93%;
-        padding: 10px;
+        padding-bottom: 2%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
+        @include mobile{
+            align-items: center;
+            justify-content: center;
+        }
         h1{
             color: white;
             font-size: 50px;
             font-weight: 500;
+            @include mobile{
+                font-size: 30px;
+                font-weight: 400;
+            }
         }
     }
     .wrapper{
@@ -22,38 +33,56 @@
         align-items:flex-start;
         justify-content: space-between;
         overflow: hidden; 
-        .left{
-            flex: 25%;
+        @include mobile{
+            flex-direction: column;
             align-items: center;
-            flex-wrap: wrap;
-            justify-content: center;
-            .itemContainer{
-                img{
-                    width: 80%;
-                    height: 90%;
-                    
-                }
-                display: flex;
-                align-items: center;
-            }
-           
         }
+        .imgWrapper{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            width: 70%;
+            overflow: hidden;
+            .left{
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                
+                .itemContainer{
+                    img{
+                        width: 80%;
+                        height: 90%;
+                    }
+                    display: flex;
+                    align-items: center;
+                }
+            
+            }
+        }
+        
         ul{
             flex:50%;
             align-items: center;
             justify-content: center;
             display: flex;
             flex-direction: column;
+            font-size: 20px;
+            
+            @include mobile{
+                font-size: 15px;
+            }
             li{
                 display: flex;
                 align-items: center;
                 padding: 5%;
+                overflow: hidden;
                 .icon{
                     padding-right: 15px;
                 }
                 h1{
                     color: white;
-                    font-size: 20px;
+                    font-size: inherit;
                     font-weight: 100;
                 }
             }
