--- a/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
+++ b/src/components/AlphaAnalysis/Portfolios/Portfolios.scss
@@ -1,4 +1,4 @@
-
+@import "../../../global.scss";
 .Portfolio{
     display: flex;
     flex-direction: column;
@@ -14,6 +14,9 @@
         align-items: center;
         overflow: hidden;
         h1{
+            @include mobile{
+                font-size: 30px;
+            }
             color: white;
             font-size: 50px;
             font-weight: 100;
@@ -22,9 +25,12 @@
     .wrapper{
         height: 100%;
         width: 75%;
+        @include mobile{
+            width: 100%;
+        }
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-between;
         align-items:flex-start; 
         overflow: hidden;       
         .andre{
@@ -38,6 +44,11 @@
                 justify-content: center;
                 align-items: center;
                 .top{
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
                         border-radius: 50%;   
                         height: auto;
@@ -46,6 +57,9 @@
                 }
                 .bottom{
                     h1{
+                        @include mobile{
+                            font-size: 20px;
+                        }
                         font-weight: 300;
                         color: white;
                         height: auto;
@@ -54,6 +68,9 @@
                         text-align: center;
                     }
                     h2{
+                        @include mobile{
+                            font-size: 12px;
+                        }
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
@@ -74,26 +91,33 @@
                 justify-content: center;
                 align-items: center;
                 .top{
+                    height: 100%;
+                    width: 100%;
                     display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
-                        height: 200px;
-                        width: 200px;
+                        height: auto;
+                        width: auto;
                         border-radius: 50%;           
                     }
                 }
                 .bottom{
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
                     h1{
+                        @include mobile{
+                            font-size: 20px;
+                        }
                         font-weight: 300;
                         color: white;
                         height: auto;
                         width: auto;
-                        text-align: center;
                         padding-top: 30px;
+                        text-align: center;
                     }
                     h2{
+                        @include mobile{
+                            font-size: 12px;
+                        }
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
@@ -114,6 +138,11 @@
                 justify-content: center;
                 align-items: center;
                 .top{
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
                         height: auto;
                         width: auto;
@@ -122,14 +151,20 @@
                 }
                 .bottom{
                     h1{
-                        width: auto;
-                        height: auto;
+                        @include mobile{
+                            font-size: 20px;
+                        }
                         font-weight: 300;
                         color: white;
+                        height: auto;
+                        width: auto;
                         padding-top: 30px;
                         text-align: center;
                     }
                     h2{
+                        @include mobile{
+                            font-size: 12px;
+                        }
                         font-weight: 100;
                         font-size: 15px;
                         text-align: center;
