--- a/src/components/AlphaAnalysis/topbar/topbar.scss
+++ b/src/components/AlphaAnalysis/topbar/topbar.scss
@@ -22,8 +22,16 @@
                 font-size: 40px;
                 font-weight: 500;
                 text-decoration: none;
+                @include mobile{
+                    font-size: 30px
+                }
+                
             }
             .logo{
+                @include mobile {
+                    width: 20px;
+                    height: 30px;
+                }
                 width: 40px;
                 height: 50px;
                 color: inherit;
