--- a/src/components/AndrePortfolio/topbar/topbar.scss
+++ b/src/components/AndrePortfolio/topbar/topbar.scss
@@ -11,11 +11,11 @@
     .wrapper{
         display: flex;
         align-items: center;
-        justify-content: space-between;
         .left{
             display: flex;
             align-items: center;
             width: 50%;
+           
             .logo{
                 padding-left: 2%;
                 padding-right: 5%;
@@ -23,17 +23,30 @@
                 font-weight: 700;
                 text-decoration: none;
                 color: inherit;
+                @include mobile{
+                    font-size: 30px;
+                }
             }
             .itemContainer{
                 display: flex;
                 align-items: center;
+                flex-direction: row;
                 padding-right: 5%;
                 width: auto;
+                @include mobile{
+                    display: none;
+                }
                 .icon{
+                    @include mobile{
+                        font-size: 15px;
+                    }
                     font-style: 10px;
                     margin-right: 5px;
                 }
                 span{
+                    @include mobile{
+                        font-size: 12px;
+                    }
                     font-style: 15px;
                     font-weight: 400;
                 }
