--- a/src/components/AlphaAnalysis/topbar/topbar2.scss
+++ b/src/components/AlphaAnalysis/topbar/topbar2.scss
@@ -49,7 +49,7 @@
                 span{
                     width: 100%;
                     height: 3px;
-                    background-color: white;
+                    background-color: rgb(228, 214, 192);
                     transform-origin: left;
                     transition: all 1s ease;
                 }
