--- a/src/components/AlphaAnalysis/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/watchlist/Watchlist.scss
@@ -45,7 +45,6 @@
                 height: 70%;
             }
             .itemContainer{
-                background-color: blue;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -54,10 +53,14 @@
                 width: 100%;
                 @include mobile{
                     height: 90%;
+                    width: 100%;
                 }
                 
                 img{
-                    overflow: hidden;
+                    @include mobile{
+                        height: 90%;
+                        width: 100%;
+                    }
                 }
             }
         
