--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -14,6 +14,8 @@
         align-items: flex-start;
         overflow: hidden;
         @include mobile{
+            
+            padding-top: 3%;
             align-items: center;
             justify-content: center;
         }
@@ -22,8 +24,9 @@
             font-size: 50px;
             font-weight: 500;
             @include mobile{
-                font-size: 30px;
+                font-size: 20px;
                 font-weight: 400;
+                text-align: center;
             }
         }
     }
@@ -43,22 +46,20 @@
             align-items: center;
             justify-content: center;
             width: 70%;
+            height: 100%;
             overflow: hidden;
-            .left{
-                align-items: center;
-                flex-wrap: wrap;
-                justify-content: center;
-                
-                .itemContainer{
-                    img{
-                        width: 80%;
-                        height: 90%;
-                    }
-                    display: flex;
-                    align-items: center;
-                }
-            
+            @include mobile{
+                width: 90%;
             }
+            .left{
+                img{
+                    width: 80%;
+                    height: 90%;
+                }
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }         
         }
         
         ul{
@@ -70,7 +71,7 @@
             font-size: 20px;
             
             @include mobile{
-                font-size: 15px;
+                font-size: 12px;
             }
             li{
                 display: flex;
