--- a/src/components/AlphaAnalysis/searchFunctionality/Search.scss
+++ b/src/components/AlphaAnalysis/searchFunctionality/Search.scss
@@ -23,8 +23,9 @@
             font-size: 50px;
             font-weight: 500;
             @include mobile{
-                font-size: 30px;
+                font-size: 20px;
                 font-weight: 400;
+                text-align: center;
             }
         }
     }
@@ -39,26 +40,27 @@
     
         .left{
             overflow: hidden;
-            height: 90%;
-            .itemContainer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+            flex:50%;
+            .imgWrapper{
+                overflow: hidden;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                overflow: hidden;
                 height: 100%;
-                width: 100%;
-                @include mobile{
-                    height: 90%;
-                    width: 100%;
-                }
                 img{
-                    @include mobile{
-                        height: 90%;
-                        width: 100%;
-                    }
+                    height: 100%;
                 }
             }
-        
+            @include mobile{
+                height: 90%;
+                width: 100%;
+                flex:60%
+            }             
         }
         
         
@@ -71,7 +73,8 @@
             font-size: 20px;
             overflow: hidden;
             @include mobile{
-                font-size: 15px;
+                font-size: 12px;
+                flex:40
             }
             li{
                 display: flex;
@@ -80,6 +83,7 @@
                 overflow: hidden;
                 @include mobile{
                     padding-bottom: 2%;
+                    width:100%;
                 }
                 .icon{
                     padding-right: 15px;
