--- a/src/components/AlphaAnalysis/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/watchlist/Watchlist.scss
@@ -24,8 +24,9 @@
             font-size: 50px;
             font-weight: 500;
             @include mobile{
-                font-size: 30px;
+                font-size: 20px;
                 font-weight: 400;
+                text-align: center;
             }
         }
     }
@@ -40,34 +41,31 @@
     
         .left{
             overflow: hidden;
-            height: 90%;
-            @include mobile{
-                height: 70%;
-            }
-            .itemContainer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+            flex:50%;
+            .imgWrapper{
+                overflow: hidden;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                overflow: hidden;
                 height: 100%;
-                width: 100%;
-                @include mobile{
-                    height: 90%;
-                    width: 100%;
-                }
-                
                 img{
-                    @include mobile{
-                        height: 90%;
-                        width: 100%;
-                    }
+                    height: 100%;
                 }
             }
-        
+            @include mobile{
+                height: 90%;
+                width: 100%;
+                flex:60%
+            }       
         }
         
         
-        ul{
+        ul{            
             flex:50%;
             align-items: center;
             justify-content: center;
@@ -75,6 +73,7 @@
             flex-direction: column;
             font-size: 20px;
             overflow: hidden;
+            
             @include mobile{
                 font-size: 12px;
             }
@@ -83,8 +82,10 @@
                 align-items: center;
                 padding-bottom: 5%;
                 overflow: hidden;
+                width:75%;
                 @include mobile{
                     padding-bottom: 2%;
+                    width:100%;
                 }
                 .icon{
                     padding-right: 15px;
