--- a/src/components/AlphaAnalysis/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/watchlist/Watchlist.scss
@@ -9,8 +9,7 @@
     
     .top{
         width: 93%;
-        padding-bottom: 3%;
-        padding-top: 2%;
+        height: 10%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
@@ -34,6 +33,7 @@
         padding-left: 3%;
         display: flex;
         overflow: hidden; 
+        height: 85%;
         @include mobile{
             flex-direction: column;
             align-items: center;
@@ -47,24 +47,23 @@
             height: 100%;
             width: 100%;
             flex:50%;
+            @include mobile{
+                flex:60%;
+            }
             .imgWrapper{
                 overflow: hidden;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 height: 100%;
-                width: fit-content;
-                background-color: red;
-                img{
-                    width: 100%;
-                    height: 100%;
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit:contain;
                 }
             }
-            @include mobile{
-                height: 90%;
-                width: 100%;
-                flex:60%
-            }       
+                
+                
         }
         
         
@@ -78,6 +77,7 @@
             overflow: hidden;
             
             @include mobile{
+                flex:40%;
                 font-size: 12px;
             }
             li{
