--- a/src/components/AndrePortfolio/Works/Work.scss
+++ b/src/components/AndrePortfolio/Works/Work.scss
@@ -4,62 +4,87 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    h1{
-        font-weight: 200;
-        font-size: 60px;
-        color: rgb(116, 200, 245);
-    }
-    ul{
-        margin: 10px;
-        padding: 0;
-        list-style: none;
+    justify-content: center;
+    max-height: 100%;
+    overflow: hidden;
+    .top{
+        flex: 15%;
+        height: 20%;
+        width: 75%;
         display: flex;
-        
-    }
-    .container{
-        width: 70%;
-        display: flex;
-        align-items: center;
         justify-content: center;
-        flex-wrap: wrapm;
-        @include mobile{
-            width: 95%;
-        }
-        .item{
-            width: 520px;
-            height: 260px;
+        align-items: center;
+        flex-direction: column;
+        overflow: hidden;
+        h1{
+            font-weight: 200;
+            font-size: 60px;
+            color: rgb(116, 200, 245);
+            overflow: hidden;
             @include mobile{
-                width: 300px;
-                height: 160px;
+                font-size: 40px;
             }
-            border-radius: 20px;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid white;
-            margin:10px 20px;
-            display: flex;
-            position: relative;
-            transition: all .75s ease;
-            cursor: pointer;
-            h3{
-                position: absolute;
-                font-style: 20px;
-                color:white;
-            }
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: 1;
-            } 
-            &:hover{
-                background-color: $menuClickColor;
-                img{
-                    opacity: .2;
-                    z-index: 0;
-                }
-                
-            }            
+        }
+        ul{
+            overflow: hidden;
+            padding: 0;
+            list-style: none;
+            display: flex;            
         }
     }
+    
+    .bottom{
+        flex:95%;
+        
+        .slider{
+            display: flex;
+            left: 0;
+            transition: all .5s ease-out;
+            overflow: hidden;
+            
+            .container{
+                width: 100vw;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                padding-bottom: 10vw;
+                .item{
+                    @include mobile{
+                        height: 80%;
+                        width: 90%;
+                        margin-bottom: 10%;
+                    }
+                    pointer-events: none;
+                    overflow: hidden;
+                    width: 90%;
+                    height: 90%;
+                    border-radius:20px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: $menuClickColor;
+                    color: white;
+                    h1{
+                        font-weight: 200;
+                        font-size: 60px;
+                        @include mobile{
+                            font-size: 40px;
+                        }
+                    }
+                    h2{
+                        width: 80%;
+                        padding-top: 25px;
+                        font-weight: 100;
+                        font-size: 30px;
+                        @include mobile{
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    
 }
