--- a/src/components/AlphaAnalysis/InnerMenu/InnerMenu.scss
+++ b/src/components/AlphaAnalysis/InnerMenu/InnerMenu.scss
@@ -10,13 +10,13 @@
         position: absolute;
 
         &.left{
-            left: 100px;
+            left: 70px;
             @include mobile{
                 left: 30px;
             }
         }
         &.right{
-            right: 100px;
+            right: 70px;
             @include mobile{
                 right: 30px;
             }
@@ -24,7 +24,7 @@
     }
 
     .slider{
-        height: 90%;
+        height: 100%;
         display: flex;
         position: absolute;
         left: 0;
@@ -41,10 +41,13 @@
                     width: 90%;
                     margin-bottom: 10%;
                 }
+                @include large{
+                    width: 75%;
+                }
                 pointer-events: none;
                 overflow: hidden;
-                width: 70%;
-                height: 90%;
+                width: 80%;
+                height: 85%;
                 border-radius:20px;
                 display: flex;
                 align-items: center;
