--- a/src/components/AlphaAnalysis/MarketWatch/MarketWatch.scss
+++ b/src/components/AlphaAnalysis/MarketWatch/MarketWatch.scss
@@ -9,56 +9,60 @@
 
     .top{ 
         width: 93%;
-        padding-bottom: 2%;
+        height: 5%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
         @include mobile{
-            flex:5%;
-            padding-top: 3%;
+            width: 100%;
             align-items: center;
             justify-content: center;
         }
-        h1{
+        h2{
             color: white;
             font-size: 50px;
-            font-weight: 500;
+            font-weight: 200;
             @include mobile{
-                font-size: 20px;
-                font-weight: 400;
+                font-size: 30px;
+                font-weight: 200;
                 text-align: center;
             }
         }
     }
     .wrapper{
-
         padding-left: 3%;
         display: flex;
         align-items:flex-start;
         justify-content: space-between;
         overflow: hidden; 
+        height: 100%;
         @include mobile{
-            flex: 95%;
             flex-direction: column;
             align-items: center;
         }
         .imgWrapper{
-            flex:60%;
+            flex:50%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 70%;
+            max-height: 100%;
             height: 100%;
             overflow: hidden;
             @include mobile{
                 width: 90%;
-                height: 100%;
             }
             .left{
                 img{
-                    width: 90%;
-                    height: 100%;
+                    max-height: 80%;
+                    height: 80%;
+                    max-width: 80%;
+                    @include large{
+                        width:78%;
+                    }
+                    @include mobile{
+                        width: 68%;
+                    }
                 }
                 display: flex;
                 align-items: center;
@@ -66,7 +70,7 @@
             }         
         }
         .right{
-            padding-top: 5%;
+            padding-top: 10%;
             flex: 50%;
             align-items: center;
             justify-content: center;
@@ -78,13 +82,16 @@
                 width: 90%;
                 height: 100%;
             }
-        
+            @include large{
+                padding-top: 5%;
+            }
+            
             .itemContainer{
                 display: flex;
                 align-items: center;
                 h2{
                     font-size: 20px;
-                    padding: 10px;
+                    padding: 5%;
                     font-weight: 100;
                     @include mobile{
                         padding: 1%;
