--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -9,24 +9,23 @@
     
     .top{
         width: 93%;
-        padding-bottom: 2%;
+        height: 5%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
         @include mobile{
-            
-            padding-top: 3%;
             align-items: center;
             justify-content: center;
         }
-        h1{
+        h2{
             color: white;
             font-size: 50px;
-            font-weight: 500;
+            font-weight: 200;
             @include mobile{
-                font-size: 20px;
-                font-weight: 400;
+                font-size: 30px;
+                font-weight: 200;
                 text-align: center;
+                
             }
         }
     }
@@ -36,25 +35,33 @@
         align-items:flex-start;
         justify-content: space-between;
         overflow: hidden; 
+        height: 100%;
         @include mobile{
             flex-direction: column;
             align-items: center;
         }
         .imgWrapper{
+            flex:50%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 70%;
+            max-height: 100%;
             height: 100%;
             overflow: hidden;
             @include mobile{
                 width: 90%;
+                flex:60%
             }
             .left{
+                overflow: hidden;
                 img{
-                    width: 80%;
-                    height: 90%;
+                    max-height: 80%;
+                    height: 80%;
+                    max-width: 80%;
+                    @include mobile{
+                        height: 70%;
+                    }
                 }
                 display: flex;
                 align-items: center;
@@ -69,17 +76,28 @@
             display: flex;
             flex-direction: column;
             font-size: 20px;
+            overflow: hidden;
             
             @include mobile{
+                flex:40%;
                 font-size: 12px;
+            }
+            @include large{
+                padding-top: 5%;
             }
             li{
                 display: flex;
                 align-items: center;
-                padding: 5%;
+                padding-bottom: 5%;
                 overflow: hidden;
+                width:75%;
+                @include mobile{
+                    padding-bottom: 2%;
+                    width:100%;
+                }
                 .icon{
                     padding-right: 15px;
+                    
                 }
                 h1{
                     color: white;
