--- a/src/components/AlphaAnalysis/StockPage/StockPage.scss
+++ b/src/components/AlphaAnalysis/StockPage/StockPage.scss
@@ -9,56 +9,62 @@
 
     .top{ 
         width: 93%;
-        padding-bottom: 2%;
+        height: 5%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
         @include mobile{
-            flex:5%;
-            padding-top: 3%;
             align-items: center;
             justify-content: center;
+            padding-bottom: 10px;
+            height: 6%;
         }
-        h1{
+        h2{
             color: white;
             font-size: 50px;
-            font-weight: 500;
+            font-weight: 200;
             @include mobile{
-                font-size: 20px;
-                font-weight: 400;
-                text-align: center;
+                font-size: 28px;
+                font-weight: 200;
+                
             }
         }
     }
     .wrapper{
-
         padding-left: 3%;
         display: flex;
         align-items:flex-start;
         justify-content: space-between;
         overflow: hidden; 
+        height: 100%;
         @include mobile{
-            flex: 95%;
             flex-direction: column;
             align-items: center;
         }
         .imgWrapper{
-            flex:60%;
+            flex:50%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 70%;
+            max-height: 100%;
             height: 100%;
             overflow: hidden;
             @include mobile{
                 width: 90%;
-                height: 100%;
             }
             .left{
+                overflow: hidden;
                 img{
-                    width: 90%;
-                    height: 100%;
+                    max-height: 80%;
+                    height: 80%;
+                    max-width: 80%;
+                    @include large{
+                        width:70%;
+                    }
+                    @include mobile{
+                        width: 70%;
+                    }
                 }
                 display: flex;
                 align-items: center;
@@ -66,27 +72,31 @@
             }         
         }
         .right{
-            flex: 40%;
+            flex: 50%;
             align-items: center;
             justify-content: center;
             color: white;
             overflow: hidden;
             width: 75%;
             @include mobile{
+                padding: none;
                 width: 90%;
+                height: 100%;
+            }
+            @include large{
+                padding-top: 5%;
             }
             
             .itemContainer{
                 display: flex;
                 align-items: center;
                 h2{
-                    padding: 5%;
                     font-size: 20px;
+                    padding: 5%;
                     font-weight: 100;
                     @include mobile{
-                        padding: 1%;
+                        padding: 2%;
                         font-size: 12px;
-                        width: 90%;
                     }
                 }
             }
