--- a/src/components/AlphaAnalysis/searchFunctionality/Search.scss
+++ b/src/components/AlphaAnalysis/searchFunctionality/Search.scss
@@ -9,30 +9,33 @@
     
     .top{
         width: 93%;
-        padding-bottom: 2%;
+        height: 5%;
         display: flex;
         align-items: flex-start;
         overflow: hidden;
         @include mobile{
             align-items: center;
             justify-content: center;
-            padding-top: 3%;
+            padding-bottom: 5%;
         }
-        h1{
+        h2{
             color: white;
             font-size: 50px;
-            font-weight: 500;
+            font-weight: 200;
             @include mobile{
-                font-size: 20px;
-                font-weight: 400;
-                text-align: center;
+                font-size: 28px;
+                font-weight: 200;    
+                text-align: center;            
             }
         }
     }
     .wrapper{
         padding-left: 3%;
         display: flex;
+        align-items:flex-start;
+        justify-content: space-between;
         overflow: hidden; 
+        height: 100%; 
         @include mobile{
             flex-direction: column;
             align-items: center;
