--- a/src/components/AlphaAnalysis/InnerMenu/InnerMenu.scss
+++ b/src/components/AlphaAnalysis/InnerMenu/InnerMenu.scss
@@ -37,17 +37,26 @@
             justify-content: center;
             overflow: hidden;
             .item{
+                
                 @include mobile{
-                    width: 90%;
-                    margin-bottom: 10%;
+                    max-width: 320px;
+                    max-height: 550px;
+                }
+                @include tablet{
+                    max-width: 700px;
+                    max-height: 1000px;
+                }
+                @include mid{
+                    max-width: 600px;
+                    max-height: 1200px;
                 }
                 @include large{
-                    width: 75%;
+                    max-width: 1000px;
+                    max-height: 1000px;
+                    width: 90%;
                 }
                 pointer-events: none;
                 overflow: hidden;
-                width: 80%;
-                height: 85%;
                 border-radius:20px;
                 display: flex;
                 align-items: center;
