--- a/src/components/AlphaAnalysis/Plaid/Plaid.scss
+++ b/src/components/AlphaAnalysis/Plaid/Plaid.scss
@@ -6,7 +6,6 @@
     align-items: center;
     overflow: hidden;
     height: 100%;
-    
     .top{
         width: 93%;
         height: 5%;
@@ -36,9 +35,17 @@
         justify-content: space-between;
         overflow: hidden; 
         height: 100%;
+        max-width: 1200px;
         @include mobile{
             flex-direction: column;
             align-items: center;
+        }
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+        }
+        @include mid{
+            max-width: 800px;
         }
         .imgWrapper{
             flex:50%;
@@ -52,15 +59,25 @@
             @include mobile{
                 width: 90%;
                 flex:60%
+                
             }
+            
             .left{
                 overflow: hidden;
+                padding-right: 20px;
                 img{
-                    max-height: 80%;
-                    height: 80%;
-                    max-width: 80%;
+                    max-height: 700px;
+                    max-width: 300px;
                     @include mobile{
-                        height: 70%;
+                        max-height: 200px;
+                        max-width: 100px;
+                    }
+                    @include tablet{
+                        max-height: 350px;
+                        max-width: 300px;
+                    }
+                    @include large{
+                        height: 70%
                     }
                 }
                 display: flex;
@@ -77,23 +94,27 @@
             flex-direction: column;
             font-size: 20px;
             overflow: hidden;
-            
+            padding-top: 10%;
             @include mobile{
                 flex:40%;
                 font-size: 12px;
             }
-            @include large{
-                padding-top: 5%;
-            }
             li{
                 display: flex;
                 align-items: center;
+                justify-content: center;
                 padding-bottom: 5%;
                 overflow: hidden;
-                width:75%;
                 @include mobile{
                     padding-bottom: 2%;
-                    width:100%;
+                }
+                @include tablet{
+                    padding-bottom: 5%;
+                    padding-top: 0%;
+                    width: 90%;
+                }
+                @include large{
+                   width: 100%;
                 }
                 .icon{
                     padding-right: 15px;
