--- a/src/components/AlphaAnalysis/StockPage/StockPage.scss
+++ b/src/components/AlphaAnalysis/StockPage/StockPage.scss
@@ -20,13 +20,17 @@
             height: 6%;
         }
         h2{
+            overflow:  hidden;
             color: white;
             font-size: 50px;
             font-weight: 200;
             @include mobile{
                 font-size: 28px;
                 font-weight: 200;
-                
+            }
+            @include tablet{
+                font-size: 35px;
+                font-weight: 200;
             }
         }
     }
@@ -41,29 +45,36 @@
             flex-direction: column;
             align-items: center;
         }
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+        }
+        @include mid{
+            max-width: 800px;
+        }
         .imgWrapper{
-            flex:50%;
+            flex:60%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
             max-height: 100%;
-            height: 100%;
             overflow: hidden;
             @include mobile{
                 width: 90%;
             }
             .left{
-                overflow: hidden;
+                padding-right: 10px;
                 img{
-                    max-height: 80%;
-                    height: 80%;
-                    max-width: 80%;
-                    @include large{
-                        width:70%;
-                    }
+                    max-height: 700px;
+                    max-width: 300px;
                     @include mobile{
-                        width: 70%;
+                        max-height: 230px;
+                        max-width: 85px;
+                    }
+                    @include tablet{
+                        max-height: 350px;
+                        max-width: 300px;
                     }
                 }
                 display: flex;
@@ -72,31 +83,38 @@
             }         
         }
         .right{
+            padding-top: 10%;
             flex: 50%;
             align-items: center;
             justify-content: center;
             color: white;
             overflow: hidden;
-            width: 75%;
             @include mobile{
                 padding: none;
                 width: 90%;
                 height: 100%;
             }
-            @include large{
-                padding-top: 5%;
+            @include tablet{
+                padding-bottom: 1%;
+                padding-top: 2%;
+                width:90%;
             }
-            
             .itemContainer{
                 display: flex;
                 align-items: center;
+                .icon{
+                    padding-right: 15px;
+                }
                 h2{
                     font-size: 20px;
-                    padding: 5%;
                     font-weight: 100;
                     @include mobile{
-                        padding: 2%;
+                        padding: 1%;
                         font-size: 12px;
+                    }
+                    @include tablet{
+                        padding: 0%;
+                        padding-bottom: 5%;
                     }
                 }
             }
