--- a/src/components/AlphaAnalysis/searchFunctionality/Search.scss
+++ b/src/components/AlphaAnalysis/searchFunctionality/Search.scss
@@ -36,11 +36,18 @@
         justify-content: space-between;
         overflow: hidden; 
         height: 100%; 
+        max-width: 1200px;
         @include mobile{
             flex-direction: column;
             align-items: center;
         }
-    
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+        }
+        @include mid{
+            max-width: 800px;
+        }
         .left{
             overflow: hidden;
             display: flex;
@@ -59,6 +66,18 @@
                 justify-content: center;
                 height: 100%;
                 img {
+                    @include large{
+                        max-width: 300px;
+                        max-height: 350px;
+                    }
+                    @include tablet{
+                        max-width: 300px;
+                        max-height: 350px;
+                    }
+                    @include mobile{
+                        max-height: 200px;
+                        max-width: 100px;
+                    }
                     max-width: 100%;
                     max-height: 100%;
                     object-fit:contain;
@@ -79,6 +98,10 @@
                 font-size: 12px;
                 flex:40%;
             }
+            @include large{
+                padding-top: 5%;
+                width: 80%;
+            }
             li{
                 display: flex;
                 align-items: center;
@@ -88,6 +111,7 @@
                     padding-bottom: 2%;
                     width:100%;
                 }
+                
                 .icon{
                     padding-right: 15px;
                     
