--- a/src/components/AlphaAnalysis/watchlist/Watchlist.scss
+++ b/src/components/AlphaAnalysis/watchlist/Watchlist.scss
@@ -34,12 +34,16 @@
         padding-left: 3%;
         display: flex;
         overflow: hidden; 
+        max-width: 1200px;
         height: 85%;
         @include mobile{
             flex-direction: column;
             align-items: center;
         }
-    
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+        }
         .left{
             overflow: hidden;
             display: flex;
@@ -58,6 +62,17 @@
                 justify-content: center;
                 height: 100%;
                 img {
+                    @include large{
+                        height: 80%;
+                    }
+                    @include tablet{
+                        max-width: 300px;
+                        max-height: 350px;
+                    }
+                    @include mobile{
+                        max-height: 200px;
+                        max-width: 100px;
+                    }
                     max-width: 100%;
                     max-height: 100%;
                     object-fit:contain;
@@ -81,15 +96,23 @@
                 flex:40%;
                 font-size: 12px;
             }
+            @include large{
+                width: 80%;
+            }
             li{
                 display: flex;
                 align-items: center;
                 padding-bottom: 5%;
                 overflow: hidden;
-                width:75%;
+                @include tablet{
+                    width: 90%;
+                }
                 @include mobile{
                     padding-bottom: 2%;
                     width:100%;
+                }
+                @include large{
+                    width: 95%;
                 }
                 .icon{
                     padding-right: 15px;
